--- a/css/hero.css
+++ b/css/hero.css
@@ -1,7 +1,7 @@
 html, body{
 	font-family: Arial, sans-serif;  
 	margin: 0;
-	background-color: grey;
+	background-color: #fb9c5d;
 	margin: 0;
 }
 
